# ws_brew_sim

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  telegraf.conf
examples/: server_bake.py  simple_server_obj_creation.py  simple_server_subsets.py  simple_server_with_units.py  simple_server_xml.py
grafana/provisioning/dashboards/: dashboard.yml  tunnel_oven.json
grafana/provisioning/datasources/: influxdb.yml
src/ws_brew_sim/: behaviours.py  events.py  interface.py  jobs.py  modules.py  simulation.py  statemachine.py  units.py  utils.py
static/: styles.css
templates/: _jobs.html  _jobs_filter.html  _jobs_transfer.html  _statebutton.html  _statemachine_machine_state.html  _statemachine_operating_state.html  _statemachine_operation_mode.html  _statemachine_operation_state.html  _statetree.html  base.html  head.html  header.html  index.html  landing.html  module_value.html  show_unit.html  units.html
xmls/: 101_Opc.Ua.WSBasis.NodeSet2.xml  102_Opc.Ua.WSBrew.NodeSet2.xml  103_Opc.Ua.WSBake.NodeSet2.xml  111_Opc.Ua.WSBasis.NodeSet2.xml  112_Opc.Ua.WSBrew.NodeSet2.xml  113_Opc.Ua.WSBake_minimal.NodeSet2.xml  113_filter.xml  114_tunnel_oven.NodeSet2.xml
