[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "ws_brew_sim"
version = "0.1.0"

dependencies = ["logger", "asyncio", "fastapi==0.111.0", "uvicorn", "jinja2==3.1.4", "python-multipart", "asyncua @ git+https://github.com/Clonky/opcua-asyncio.git"]

authors = [{ name = "Philip Schmid", email = "philip.schmid@tum.de" }]
